err/dpark.err
Listing '.'...
Listing './bin'...
Compiling './bin/executor.py'...
Compiling './bin/scheduler.py'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/DPark-0.4.1.egg-info'...
Listing './lib/python3.5/site-packages/addict'...
Listing './lib/python3.5/site-packages/addict-2.1.1.egg-info'...
Listing './lib/python3.5/site-packages/deprecation-1.0.1.dist-info'...
Listing './lib/python3.5/site-packages/dpark'...
Compiling './lib/python3.5/site-packages/dpark/bagel.py'...
***   File "./lib/python3.5/site-packages/dpark/bagel.py", line 89
    r = verts.map(lambda (id, vert): aggregator.createAggregator(vert))
                         ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/dpark/beansdb.py'...
***   File "./lib/python3.5/site-packages/dpark/beansdb.py", line 169
    print 'load failed', self.__class__, code[:1024]
                      ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/dpark/cache.py'...
***   File "./lib/python3.5/site-packages/dpark/cache.py", line 83
    except OSError, e:
                  ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/dpark/conf.py'...
***   File "./lib/python3.5/site-packages/dpark/conf.py", line 33
    exec data in globals(), globals()
            ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/dpark/context.py'...
***   File "./lib/python3.5/site-packages/dpark/context.py", line 266
    rdd = rdd.mapValue(lambda (v,ver,t): (restore_value(*v), ver, t))
                              ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/dpark/decorator.py'...
***   File "./lib/python3.5/site-packages/dpark/decorator.py", line 16
    except ImportError, e:
                      ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/dpark/dstream.py'...
***   File "./lib/python3.5/site-packages/dpark/dstream.py", line 548
    print "-" * 80
            ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/dpark/hotcounter.py'...
***   File "./lib/python3.5/site-packages/dpark/hotcounter.py", line 53
    print k,v
          ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/dpark/hyperloglog.py'...
***   File "./lib/python3.5/site-packages/dpark/hyperloglog.py", line 30
    self.big = 1L << (HASH_LEN - b - 1)
                ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/dpark/moosefs'...
Compiling './lib/python3.5/site-packages/dpark/moosefs/__init__.py'...
***   File "./lib/python3.5/site-packages/dpark/moosefs/__init__.py", line 243
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/dpark/moosefs/consts.py'...
***   File "./lib/python3.5/site-packages/dpark/moosefs/consts.py", line 478
    S_IFMT   = 0170000 # type of file */
                     ^
SyntaxError: invalid token

Compiling './lib/python3.5/site-packages/dpark/moosefs/cs.py'...
***   File "./lib/python3.5/site-packages/dpark/moosefs/cs.py", line 148
    print len(d), sum(len(s) for s in d)
            ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/dpark/moosefs/master.py'...
***   File "./lib/python3.5/site-packages/dpark/moosefs/master.py", line 368
    print m.getdir(1)
          ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/dpark/mutable_dict.py'...
***   File "./lib/python3.5/site-packages/dpark/mutable_dict.py", line 206
    except OSError, e:
                  ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/dpark/rdd.py'...
***   File "./lib/python3.5/site-packages/dpark/rdd.py", line 241
    parted = ShuffledRDD(self.map(lambda x:(key(x),x)), aggr, parter, taskMemory).flatMap(lambda (x,y):y)
                                                                                                 ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/dpark/serialize.py'...
***   File "./lib/python3.5/site-packages/dpark/serialize.py", line 400
    print f(2)
          ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/dpark/shuffle.py'...
***   File "./lib/python3.5/site-packages/dpark/shuffle.py", line 436
    print i, hl.next()
          ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/dpark/table.py'...
***   File "./lib/python3.5/site-packages/dpark/table.py", line 29
    lambda (s,c), v: (s+v, c+1),
           ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/dpark/task.py'...
***   File "./lib/python3.5/site-packages/dpark/task.py", line 144
    except IOError, e:
                  ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/dpark/web'...
Listing './lib/python3.5/site-packages/dpark/web/ui'...
Listing './lib/python3.5/site-packages/dpark/web/ui/static'...
Listing './lib/python3.5/site-packages/dpark/web/ui/static/css'...
Listing './lib/python3.5/site-packages/dpark/web/ui/static/js'...
Listing './lib/python3.5/site-packages/dpark/web/ui/templates'...
Listing './lib/python3.5/site-packages/dpark/web/ui/views'...
Listing './lib/python3.5/site-packages/http_parser'...
Listing './lib/python3.5/site-packages/http_parser-0.8.3.egg-info'...
Listing './lib/python3.5/site-packages/lz4'...
Listing './lib/python3.5/site-packages/lz4/block'...
Listing './lib/python3.5/site-packages/lz4/frame'...
Listing './lib/python3.5/site-packages/lz4-0.18.1.egg-info'...
Listing './lib/python3.5/site-packages/msgpack'...
Listing './lib/python3.5/site-packages/msgpack_python-0.5.1.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/psutil'...
Listing './lib/python3.5/site-packages/psutil/tests'...
Listing './lib/python3.5/site-packages/psutil-5.4.3.egg-info'...
Listing './lib/python3.5/site-packages/pymesos'...
Listing './lib/python3.5/site-packages/pymesos/subprocess'...
Listing './lib/python3.5/site-packages/pymesos-0.2.15.egg-info'...
Listing './lib/python3.5/site-packages/pyquicklz-1.4.1.dist-info'...
Listing './lib/python3.5/site-packages/pyzmq-16.0.3.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/six-1.11.0.dist-info'...
Listing './lib/python3.5/site-packages/zmq'...
Listing './lib/python3.5/site-packages/zmq/.libs'...
Listing './lib/python3.5/site-packages/zmq/asyncio'...
Listing './lib/python3.5/site-packages/zmq/auth'...
Listing './lib/python3.5/site-packages/zmq/auth/asyncio'...
Listing './lib/python3.5/site-packages/zmq/backend'...
Listing './lib/python3.5/site-packages/zmq/backend/cffi'...
Listing './lib/python3.5/site-packages/zmq/backend/cython'...
Listing './lib/python3.5/site-packages/zmq/devices'...
Listing './lib/python3.5/site-packages/zmq/eventloop'...
Listing './lib/python3.5/site-packages/zmq/eventloop/minitornado'...
Listing './lib/python3.5/site-packages/zmq/eventloop/minitornado/platform'...
Listing './lib/python3.5/site-packages/zmq/green'...
Listing './lib/python3.5/site-packages/zmq/green/eventloop'...
Listing './lib/python3.5/site-packages/zmq/log'...
Listing './lib/python3.5/site-packages/zmq/ssh'...
Listing './lib/python3.5/site-packages/zmq/sugar'...
Listing './lib/python3.5/site-packages/zmq/tests'...
Listing './lib/python3.5/site-packages/zmq/tests/asyncio'...
Listing './lib/python3.5/site-packages/zmq/utils'...
Listing './share'...
Listing './share/python-wheels'...
